zellij-integration-tests/tests/snapshots/stacked_pane_list__a_hidden_member_exiting_removes_its_entry.snap
---
source: zellij-integration-tests/tests/stacked_pane_list.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  + 
                                                       │ Pane #1
                                                  <↓↑> │ Pane #3
$ third-member
$ █
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
