zellij-integration-tests/tests/snapshots/stacked_pane_list__disabling_stacked_pane_list_restores_the_classic_stack.snap
---
source: zellij-integration-tests/tests/stacked_pane_list.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  + 
──────────────────────────────────────────────────────── Pane #1 ───────────────────────────────────────────────────────
──────────────────────────────────────────────────────── Pane #2 ───────────────────────────────────────────────────────
$ █
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
