zellij-integration-tests/tests/snapshots/stacked_pane_list__floating_the_visible_member_promotes_its_neighbor.snap
---
source: zellij-integration-tests/tests/stacked_pane_list.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  + 
                                                       │ Pane #1
                                                  <↓↑> │ Pane #2
$ second-member
$
                              ┌ Pane #3 ──────────────────────────────────────── PIN [ ] ┐
                              │$ third-member                                            │
                              │$ █                                                       │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              └──────────────────────────────────────────────────────────┘
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
